--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     -->
     <script type="text/javascript" src="js/libs/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="js/libs/handlebars.js"></script>
-    <script type="text/javascript" src="js/app/instagram.js"></script>
+    <script type="text/javascript" src="js/modules/instagram.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 
 </body>
